##########################
# Setup.py Configuration #
##########################
[metadata]
name = ccpncdatabase
version = v0.1
description = 
long_description = file: README.md

# URLs associated with the project
url = https://gitlab.com/stur86/ccpnc-database
project_urls =
    Bug Tracker = https://gitlab.com/stur86/ccpnc-database/issues
    Source Code = https://gitlab.com/stur86/ccpnc-database

# Author information
author = 
author_email = 
maintainer =
maintainer_email = 

# License Information
#license = MIT
#license_file = LICENSE.md

# Search tags
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Nuclear Magnetic Resonance
    Materials Science
    Materials Informatics

# Requirements
[options]
install_requires =
    flask~=1.1
    flask-mail~=0.9
    flask_cors~=3.0
    soprano~=0.8
    ase~=3.20
    jinja2~=2.11
    markupsafe==2.0.1
    pymongo~=3.12
    schema~=0.7
    pyyaml~=5.0
    requests~=2.27
    numpy~=1.22
    mongomock~=4.0

zip_safe = False
include_package_data = True
python_requires = >=3.8

packages = find:

[options.extras_require]
test =
    pytest~=7.1
