##########################
# Setup.py Configuration #
##########################
[metadata]
name = ccpncdatabase
version = v0.1
description = 
long_description = file: README.md

# URLs associated with the project
url = https://github.com/CCP-NC/ccpnc-database
project_urls =
    Bug Tracker = https://github.com/CCP-NC/ccpnc-database/issues
    Source Code = https://github.com/CCP-NC/ccpnc-database

# Author information
author = 
author_email = 
maintainer =
maintainer_email = 

# License Information
#license = MIT
#license_file = LICENSE.md

# Search tags
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Nuclear Magnetic Resonance
    Materials Science
    Materials Informatics

# Requirements
[options]
install_requires =
    flask>=2.2.5
    flask-mail~=0.10.0
    flask-cors>=4.0.1
    soprano~=0.8
    ase~=3.23
    jinja2>=3.1.4
    markupsafe==2.1.5
    pymongo>=4.6.3
    schema~=0.7
    pyyaml>=6.0.1
    requests~=2.32
    numpy~=1.24
    mongomock~=4.0

zip_safe = False
include_package_data = True
python_requires = >=3.8

packages = find:

[options.extras_require]
test =
    pytest~=8.2
